change footer, fixed horizontal scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 html,
 body {
-  min-height: 100%;
   height: 100%;
   margin: 0px;
 }
@@ -47,11 +46,11 @@ header a:hover {
 
 .footer {
   width: 100%;
-  background-image: url("/funFooter1.png");
+  background-image: url("/funFooter.png");
   background-repeat: repeat-x;
   justify-content: space-around;
   margin-top: auto;
-  padding: 27px 1px 1px;
+  padding: 27px 0px 1px;
   grid-row: 2;
   align-self: end;
 }
